# bwi-hackathon

./: .env.sample  .gitignore  Dockerfile  pyproject.toml
output/: application  application.json  eval  eval.json  job.json  personal-questions  personal-questions.json  test-description.json  test1.json  test1.txt
src/: main.py  maintenance.py  model.py  openapi.json
src/crew/: tools.py
src/crew/agents/: cv_agents.py  eval_agents.py  job_agents.py  quiz_agents.py
src/crew/crews/: cv_crew.py  eval_crew.py  job_crew.py  quiz_crew.py
src/crew/tasks/: cv_tasks.py  eval_tasks.py  job_tasks.py  quiz_tasks.py
src/db/: db_connection.py  db_tasks.py
src/prompt_clients/: agentic.py  models.py
src/prompt_clients/prompt_templates/: prompt_factory.py
src/prompt_clients/prompt_templates/llama3/: base.py  base_deprecated.py
src/prompt_clients/prompt_templates/mistral/: base.py
src/watsonx/: llm.py  models.py  watson_ai_client.py
