[project]
name = "bwi-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.80.0",
    "fastapi-cli>=0.0.5",
    "fastapi>=0.115.5",
    "ibm-watsonx-ai>=1.1.24",
    "onnxruntime>=1.20.1",
    "psycopg2>=2.9.10",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.17",
]
